2004-11-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c: (is_desktop_file),
	(nautilus_file_is_nautilus_link):
	Don't check for "application/x-gnome-app-info", as that is already
	handled by the alias system. This also avoids stating for a
	mimetype xml file.
	
	* src/nautilus-throbber.c:
	Don't create a new icon theme for each throbber.
	Use GtkIconTheme instead of GnomeIconTheme
	
	* libnautilus-private/nautilus-ui-utilities.[ch]:
	New function nautilus_ui_string_get to cache the loaded ui files.
	
	* src/nautilus-navigation-window.c:
	Remove old bonoboui stuff
	
	* src/nautilus-navigation-window-menus.c:
	Open New window is Ctrl-N.
	Use the new nautilus_ui_string_get call
	
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-menus.c: 
	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/fm-icon-view.c:
	* src/file-manager/fm-list-view.c:
	Use the new nautilus_ui_string_get call
	
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/file-manager/nautilus-icon-view-ui.xml:
	Name separators to work around bug #158620
	
2004-11-18  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/nautilus-desktop-icon-view-ui.xml:
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/file-manager/nautilus-icon-view-ui.xml:
	* src/file-manager/nautilus-list-view-ui.xml:
	* src/nautilus-actions.h:
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-menus.c:
	* src/nautilus-window.[ch]:
	Add all extra accellerators and clean up ui files.

2004-11-18  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-menus.c:
	* src/nautilus-window-toolbars.c:
	* libnautilus-private/nautilus-ui-utilities.[ch]:
	(nautilus_action_from_menu_item), (nautilus_toolbar_action_from_menu_item):