@@ -114,7 +114,7 @@ struct _NautilusNavigationWindowDetails {
         /* Toolbar */
         GtkWidget *toolbar;
         GtkTooltips *tooltips;
-        GtkWidget *location_bar_box;
+        GtkWidget *location_bar;
 
         guint extensions_toolbar_merge_id;
         GtkActionGroup *extensions_toolbar_action_group;
